examples/multicluster_regional_with_asm/postgres/destination-rule.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: external-cloud-postgres
  # Change to your namesapce
  namespace: sample
spec:
  # Change to the host name or IP of your PostgreSQL instance
  host: 34.94.102.8
  trafficPolicy:
    tls:
      mode: SIMPLE
      # The certificates in Istio Proxy is mounted from deployment YAML via K8s secret
      clientCertificate: /etc/certs/postgres-cert/client-cert.pem
      privateKey: /etc/certs/postgres-cert/client-key.pem
      caCertificates: /etc/certs/postgres-cert/server-ca.pem
