examples/multicluster_regional_with_asm/postgres/service-entry.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-cloud-postgres
  namespace: sample
spec:
  # If you are using host name, uncomment this section and comment out "addresses" section
  hosts:
  - <YOUR_INSTANCE_HOSTNAME>
  addresses:
  # Use the IP of your PostgreSQL instance here
  - 34.94.102.8/32
  location: MESH_EXTERNAL
  resolution: DNS
  ports:
  - number: 5432
    # Make sure the use "tcp-<TYPE>" format here
    name: tcp-postgres
    protocol: TCP
